--- a/www/css/home.css
+++ b/www/css/home.css
@@ -149,8 +149,12 @@
 	margin-left: 15px;
 	width: 95px;
 	height: 95px;
-	background:url(../img/Big/TMPimgagal.jpg);
-	background-size: 100% 100%;
+	/*background:url(../img/Big/TMPimgagal.jpg);
+	background-size: 100% 100%;*/
+}
+.gallergListImg img{
+	width: 100%;
+	height: 100%;
 }
 .gallergListContent{
 	position: relative;
